--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
       box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
       transition: all 0.3s ease 0s;
       outline: none;
-      cursor: pointer;
       display: flex;
       background-color: white;
       flex-direction: column;
@@ -59,6 +58,8 @@ body {
         font-family: "Inconsolata", monospace;
         color: #1fab89;
         font-size: 14px; }
+      body .blockchain .block #previousValue {
+        font-size: 12px; }
       body .blockchain .block .currentHash {
         display: flex;
         margin-top: 0px; }
